몇몇 intent 설정....

--- a/android-app/app/src/main/res/layout/activity_bookmark_flowerlanguage.xml
+++ b/android-app/app/src/main/res/layout/activity_bookmark_flowerlanguage.xml
@@ -17,6 +17,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageButton
+            android:id="@+id/btnBack"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="?attr/selectableItemBackgroundBorderless"
