--- a/android-app/app/src/main/res/layout/activity_bookmark.xml
+++ b/android-app/app/src/main/res/layout/activity_bookmark.xml
@@ -73,6 +73,7 @@
         app:layout_constraintTop_toBottomOf="@id/summaryCard">
 
         <androidx.cardview.widget.CardView
+            android:id="@+id/cardFlowerLanguage"
             android:layout_width="0dp"
             android:layout_height="100dp"
             android:layout_columnWeight="1"
@@ -88,8 +89,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:scaleType="centerCrop"
-                    android:src="@drawable/flowerLanguage" /> <View
-                android:layout_width="match_parent"
+                    android:src="@drawable/flowerLanguage" />
+                <View android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="#AAFFFFFF" />
                 <androidx.constraintlayout.widget.ConstraintLayout
@@ -123,6 +124,7 @@
         </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
+            android:id="@+id/cardScent"
             android:layout_width="0dp"
             android:layout_height="100dp"
             android:layout_columnWeight="1"
@@ -171,6 +173,7 @@
             </FrameLayout>
         </androidx.cardview.widget.CardView>
         <androidx.cardview.widget.CardView
+            android:id="@+id/cardSeason"
             android:layout_width="0dp"
             android:layout_height="100dp"
             android:layout_columnWeight="1"
@@ -189,7 +192,8 @@
                     android:src="@drawable/season" /> <View
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="#AAFFFFFF" /> <androidx.constraintlayout.widget.ConstraintLayout
+                android:background="#AAFFFFFF" />
+                <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
@@ -220,6 +224,7 @@
 
 
         <androidx.cardview.widget.CardView
+            android:id="@+id/cardHexcode"
             android:layout_width="0dp"
             android:layout_height="100dp"
             android:layout_columnWeight="1"
