--- a/android-app/app/src/main/res/layout/activity_browse3.xml
+++ b/android-app/app/src/main/res/layout/activity_browse3.xml
@@ -5,7 +5,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background">
+    android:background="@color/background"
+    tools:context="com.example.plant.Browse3Activity">
 
     <RelativeLayout
         android:id="@+id/header"
