--- a/android-app/app/src/main/res/layout/activity_login.xml
+++ b/android-app/app/src/main/res/layout/activity_login.xml
@@ -17,7 +17,9 @@
         android:background="?attr/selectableItemBackgroundBorderless"
         android:src="@drawable/baseline_arrow_back_ios_24"
         app:layout_constraintStart_toStartOf="parent"
+        android:visibility="invisible"
         app:layout_constraintTop_toTopOf="parent" />
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -25,7 +27,6 @@
         android:gravity="center_horizontal"
         android:orientation="vertical"
         android:paddingHorizontal="40dp"
-        app:layout_constraintBottom_toTopOf="@+id/tvSignUpGuide"
         app:layout_constraintTop_toBottomOf="@id/btnBack"
         app:layout_constraintVertical_bias="0.3">
 
@@ -79,6 +80,7 @@
                 android:textSize="14sp" />
 
             <ImageView
+                android:id="@+id/ivPasswordToggle"
                 android:layout_width="24dp"
                 android:layout_height="24dp"
                 android:layout_gravity="end|center_vertical"
