fix: design and filter
디자인 불일치, 검색 필터 문제 해결

--- a/android-app/app/src/main/res/layout/activity_browse3.xml
+++ b/android-app/app/src/main/res/layout/activity_browse3.xml
@@ -39,17 +39,10 @@
         app:layout_constraintTop_toBottomOf="@id/header"
         app:layout_constraintBottom_toTopOf="@id/bottomNav">
 
-        <ImageView
-            android:id="@+id/ivLoadingIcon"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:src="@drawable/ic_plant_loading" />
-
         <ProgressBar
             android:id="@+id/progressBar"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:layout_marginTop="24dp"
+            android:layout_width="64dp"
+            android:layout_height="64dp"
             android:indeterminate="true"
             android:indeterminateTint="@color/button" />
 
@@ -71,8 +64,9 @@
         android:id="@+id/scrollView"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:clipToPadding="false"
         app:layout_constraintTop_toBottomOf="@id/header"
-        app:layout_constraintBottom_toTopOf="@id/bottomNav"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
@@ -80,7 +74,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:paddingBottom="24dp">
+            android:paddingBottom="100dp">
 
             <!-- 식물 이름 -->
             <TextView
