--- a/android-app/app/src/main/res/layout/activity_bookmark.xml
+++ b/android-app/app/src/main/res/layout/activity_bookmark.xml
@@ -5,7 +5,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background">
+    android:background="@color/background"
+    android:clipChildren="false"
+    android:clipToPadding="false">
 
     <!-- 상단 헤더 -->
     <include
@@ -72,8 +74,11 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
         android:layout_marginTop="24dp"
+        android:layout_marginBottom="100dp"
         android:columnCount="2"
-        app:layout_constraintTop_toBottomOf="@id/summaryCard">
+        app:layout_constraintTop_toBottomOf="@id/summaryCard"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintVertical_bias="0">
 
         <!-- 꽃말 카드 -->
         <androidx.cardview.widget.CardView
