--- a/android-app/app/src/main/res/layout/item_grid_plant.xml
+++ b/android-app/app/src/main/res/layout/item_grid_plant.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="240dp"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginEnd="12dp"
+    android:layout_marginHorizontal="6dp"
+    android:layout_marginVertical="8dp"
     app:cardCornerRadius="16dp"
     app:cardElevation="2dp"
     app:cardBackgroundColor="@color/white">
@@ -16,7 +17,7 @@
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/ivPlantGrid"
             android:layout_width="match_parent"
-            android:layout_height="150dp"
+            android:layout_height="120dp"
             android:scaleType="centerCrop"
             android:src="@drawable/lilac"
             app:shapeAppearanceOverlay="@style/TopRoundedImage20" />
