--- a/android-app/app/src/main/res/layout/view_detail_info_item.xml
+++ b/android-app/app/src/main/res/layout/view_detail_info_item.xml
@@ -16,6 +16,7 @@
         android:layout_marginBottom="12dp"/>
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/cvCategory"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="24dp"
@@ -24,6 +25,7 @@
         android:backgroundTint="@color/white">
         <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:padding="16dp" android:gravity="center_vertical">
             <com.google.android.material.imageview.ShapeableImageView
+                android:id="@+id/ivCategoryImage"
                 android:layout_width="60dp" android:layout_height="60dp"
                 android:scaleType="centerCrop" android:src="@drawable/bulbplant"
                 app:shapeAppearanceOverlay="@style/RoundedImage20"/>
@@ -32,6 +34,7 @@
                 android:layout_marginStart="16dp"
                 android:orientation="vertical">
                 <TextView
+                    android:id="@+id/tvCategoryTitle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="구근 식물"
@@ -39,6 +42,7 @@
                     android:textSize="14sp"
                     android:fontFamily="@font/pretendardmedium" />
                 <TextView
+                    android:id="@+id/tvCategoryDesc"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="4dp"
@@ -61,6 +65,7 @@
         android:layout_marginBottom="12dp"/>
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/cvSeason"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="24dp"
@@ -69,11 +74,13 @@
         android:backgroundTint="@color/white">
         <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:padding="16dp" android:gravity="center_vertical">
             <com.google.android.material.imageview.ShapeableImageView
+                android:id="@+id/ivSeasonImage"
                 android:layout_width="60dp" android:layout_height="60dp"
                 android:scaleType="centerCrop" android:src="@drawable/spring"
                 app:shapeAppearanceOverlay="@style/RoundedImage20"/>
             <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginStart="16dp" android:orientation="vertical">
                 <TextView
+                    android:id="@+id/tvSeasonTitle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="봄"
@@ -81,10 +88,11 @@
                     android:textColor="@color/text1"
                     android:textSize="14sp" />
                 <TextView
+                    android:id="@+id/tvSeasonDesc"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="4dp"
-                    android:text="11월경 온상에 넣어서 12월부터 꽃이 피고, 5월경 잎이 마르면 알뿌리를 캐내어 건조시켜 저장하였다가 다시 심는다."
+                    android:text=""
                     android:textColor="@color/button"
                     android:fontFamily="@font/pretendardregular"
                     android:lineSpacingExtra="2dp"
@@ -103,6 +111,7 @@
         android:layout_marginBottom="12dp"/>
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/cvScent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="24dp"
@@ -111,11 +120,13 @@
         android:backgroundTint="@color/white">
         <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:padding="16dp" android:gravity="center_vertical">
             <com.google.android.material.imageview.ShapeableImageView
+                android:id="@+id/ivScentImage"
                 android:layout_width="60dp" android:layout_height="60dp"
                 android:scaleType="centerCrop" android:src="@drawable/sweet"
                 app:shapeAppearanceOverlay="@style/RoundedImage20"/>
             <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginStart="16dp" android:orientation="vertical">
                 <TextView
+                    android:id="@+id/tvScentTitle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="은은하고 달콤함"
@@ -123,10 +134,11 @@
                     android:textSize="14sp"
                     android:fontFamily="@font/pretendardmedium" />
                 <TextView
+                    android:id="@+id/tvScentDesc"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="4dp"
-                    android:text="알뿌리를 가지는 식물. 감자, 백합, 달리아, 튤립 따위."
+                    android:text=""
                     android:textColor="@color/button"
                     android:fontFamily="@font/pretendardregular"
                     android:lineSpacingExtra="2dp"
@@ -145,6 +157,7 @@
         android:layout_marginBottom="12dp"/>
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/cvColor"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="40dp"
@@ -153,12 +166,14 @@
         android:backgroundTint="@color/white">
         <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:padding="16dp" android:gravity="center_vertical">
             <com.google.android.material.imageview.ShapeableImageView
+                android:id="@+id/ivColorImage"
                 android:layout_width="60dp" android:layout_height="60dp"
                 android:scaleType="centerCrop" android:src="@drawable/yellowhite"
                 app:shapeAppearanceOverlay="@style/RoundedImage20"/>
             <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginStart="16dp" android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/tvColorTitle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="노란색, 백색"
@@ -167,10 +182,11 @@
                     android:textSize="14sp"/>
 
                 <TextView
+                    android:id="@+id/tvColorDesc"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="4dp"
-                    android:text="알뿌리를 가지는 식물. 감자, 백합, 달리아, 튤립 따위."
+                    android:text=""
                     android:textColor="@color/button"
                     android:fontFamily="@font/pretendardregular"
                     android:lineSpacingExtra="2dp"
